bug: white ckan footer logo not visible in footer. new dark ckan footer logo added.

--- a/ckanext/ontario_theme/fanstatic/ontario_theme.less
+++ b/ckanext/ontario_theme/fanstatic/ontario_theme.less
@@ -809,4 +809,7 @@ footer {
     height: 96px;
     float: right;
   }
+  .attribution .ckan-footer-logo {
+    background: url(/base/images/ckan-logo-footer_dark.png) no-repeat top left;
+  }
 }
